kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-app
  template:
    metadata:
      labels:
        app: mern-app
    spec:
      containers:
      - name: mern-app
        image: 22i1156/mern-app:latest  # Replace with your Docker Hub username
        imagePullPolicy: Always              # Changed to Always to pull from registry
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
