kubernetes/mern-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-app-service
spec:
  selector:
    app: mern-app
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer  # Use NodePort if you're not on a cloud provider
